1024px breakpoint fixes
Fixed gutters so they are not too wide and logo is no longer squished.

--- a/scss/content/_header.scss
+++ b/scss/content/_header.scss
@@ -156,10 +156,9 @@
         display: block;
         max-width: 100%;
         height: 4rem;
-        overflow: hidden;
         @include centerVert;
         img{
-             max-width: 100%;
+            
              height: 4rem;
         }
   
@@ -179,7 +178,7 @@
             min-width: 4em;
             max-width: 4em;
             height: 3.5em;
-            margin-left: $gutter * 3;
+            margin-left: $gutter * 1.5;
             border-radius: .25em;
             i{
                 font-size: 1.7em
@@ -209,7 +208,7 @@
             margin-left: $gutter;
         }
         .search{
-            margin-left: $gutter * 1.5;
+            margin-left: $gutter *-1;
             margin-bottom: auto;
             border-radius: 0 3px 3px 0;
 
